--- a/sgq/templates/schema_certificativo_list.html
+++ b/sgq/templates/schema_certificativo_list.html
@@ -1,5 +1,11 @@
-<h2>{{ object.title }}</h2>
-<p>{{ object.description }}</p>
-<p>ID NUMERO: {{ schema_certificativo.id }}</p>
+<h2>Schemi Certificativi</h2>
+<ul>
+  {% for schema in object_list %}
+<h2>{{ schema.title }}</h2>
+<p>ID NUMERO: {{ schema.id }} - {{ schema.schema_certificazione }}</p>
 
-<!-- Display other attributes as needed -->
+
+ {% empty %}
+    <li> Schemi non presenti.</li>
+  {% endfor %}
+</ul>
