--- a/sgq/templates/schema_certificativo_detail.html
+++ b/sgq/templates/schema_certificativo_detail.html
@@ -1,5 +1,8 @@
-{% for schema in object_list %}
-    <h2>{{ schema.title }}</h2>
-    <p>{{ schema.description }}</p>
-    <!-- Display other attributes as needed -->
-{% endfor %}
+{% extends 'base.html' %}
+
+{% block content %}
+  <h2>{{ schema.title }}</h2>
+  <p>ID NUMERO: {{ schema.id }} - {{ schema.schema_certificazione }}</p>
+  <!-- Display other attributes as needed -->
+ 
+{% endblock %}
