--- a/sgq/templates/update_schema_certificativo.html
+++ b/sgq/templates/update_schema_certificativo.html
@@ -1,6 +1,10 @@
-<h2>Update Schema Certificativo</h2>
-<form method="post">
-  {% csrf_token %}
-  {{ form.as_p }}
-  <button type="submit">Update</button>
-</form>
+{% extends 'base.html' %}
+
+{% block content %}
+  <h2>Update Schema Certificativo</h2>
+  <form method="post">
+    {% csrf_token %}
+    {{ form.as_p }}
+    <button type="submit">Update</button>
+  </form>
+{% endblock %}
